# QR-Code

./: CMakeLists.txt  dmtx_detect.cpp  opencv_detect.cpp  zbar_detect.cpp  zxing_detect.cpp
include/: common.hpp
src/: common.cpp
